[gd_scene load_steps=18 format=3 uid="uid://cqd2paew7drrx"]

[ext_resource type="Texture2D" uid="uid://c7jqhj40ap7y1" path="res://assets/wood.jpg" id="1_dcavm"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_hevjt"]
[ext_resource type="PackedScene" uid="uid://c3228gkmr5srp" path="res://characters/controller_cursor.tscn" id="2_bu7d4"]
[ext_resource type="Texture2D" uid="uid://dextxdkq7aono" path="res://assets/logo.png" id="2_qm2me"]
[ext_resource type="Shader" path="res://shaders/crt.gdshader" id="3_pft80"]
[ext_resource type="Texture2D" uid="uid://kxd02elbnqx8" path="res://assets/tv.png" id="4_osbk5"]
[ext_resource type="FontFile" uid="uid://dfw06fmaj8nym" path="res://fonts/PixeloidSans-mLxMm.ttf" id="5_8yfr2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h8587"]
shader = ExtResource("3_pft80")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7wu0"]
content_margin_top = 6.0
content_margin_bottom = 8.0
bg_color = Color(0.168627, 0.00784314, 0.258824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sj0wf"]
content_margin_top = 6.0
content_margin_bottom = 8.0
bg_color = Color(0.356863, 0.0352941, 0.521569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bpim"]
content_margin_top = 6.0
content_margin_bottom = 8.0
bg_color = Color(0.0823529, 0.00392157, 0.141176, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6l6hj"]
content_margin_top = 6.0
content_margin_bottom = 8.0
bg_color = Color(0.168627, 0.00784314, 0.258824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lf8eu"]
content_margin_top = 6.0
content_margin_bottom = 8.0
bg_color = Color(0.356863, 0.0352941, 0.521569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_runjx"]
content_margin_top = 6.0
content_margin_bottom = 8.0
bg_color = Color(0.0823529, 0.00392157, 0.141176, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 10

[sub_resource type="Animation" id="Animation_o5nhs"]
resource_name = "zoom_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(4, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_850m5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ykvs"]
_data = {
"RESET": SubResource("Animation_850m5"),
"zoom_in": SubResource("Animation_o5nhs")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_hevjt")
metadata/_edit_horizontal_guides_ = [-896.0]

[node name="BackdropA" type="Sprite2D" parent="."]
position = Vector2(230, 287)
texture = ExtResource("1_dcavm")

[node name="BackdropA2" type="Sprite2D" parent="."]
position = Vector2(1230, 284)
texture = ExtResource("1_dcavm")

[node name="BackdropB" type="ColorRect" parent="."]
offset_left = -674.0
offset_top = -512.0
offset_right = 2473.0
offset_bottom = 1050.0
color = Color(0.0941176, 0.0941176, 0.0941176, 0.952941)

[node name="CursorLayer" type="CanvasLayer" parent="."]

[node name="ControllerCursor" parent="CursorLayer" instance=ExtResource("2_bu7d4")]
forward_keybind = "forward"
backward_keybind = "backward"
left_keybind = "left"
right_keybind = "right"
click_keybind = "joypad_click_event"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -48.0
offset_right = 1035.0
offset_bottom = 599.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)

[node name="SpaceBackdrop" type="ColorRect" parent="Control"]
texture_repeat = 2
layout_mode = 0
offset_left = 257.0
offset_top = 129.5
offset_right = 862.0
offset_bottom = 544.5
color = Color(0.00784314, 0.121569, 0.247059, 1)

[node name="Logo" type="Sprite2D" parent="Control"]
texture_filter = 1
position = Vector2(537, 235.5)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_qm2me")

[node name="CRTEffect" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_h8587")
layout_mode = 0
offset_left = 291.0
offset_top = 120.5
offset_right = 774.0
offset_bottom = 542.5

[node name="TV" type="Sprite2D" parent="Control"]
texture_filter = 1
position = Vector2(593.5, 306)
scale = Vector2(1.55, 1.546)
texture = ExtResource("4_osbk5")

[node name="Camera2D" type="Camera2D" parent="Control"]
position = Vector2(576.667, 309.167)
scale = Vector2(0.833333, 0.833333)

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 0
offset_left = 405.0
offset_top = 340.5
offset_right = 670.0
offset_bottom = 483.5
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="PlayButton" type="Button" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8yfr2")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_k7wu0")
theme_override_styles/hover = SubResource("StyleBoxFlat_sj0wf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8bpim")
text = "Play"

[node name="SettingsButton" type="Button" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8yfr2")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_6l6hj")
theme_override_styles/hover = SubResource("StyleBoxFlat_lf8eu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_runjx")
text = "Settings"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
offset_left = -1156.0
offset_top = -888.0
offset_right = 2092.0
offset_bottom = 1186.0
mouse_filter = 2
color = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ykvs")
}

[connection signal="button_up" from="Control/ScrollContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="Control/ScrollContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
